Merge sql datalogger with new library